--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -4,7 +4,7 @@
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <div class="title">EAP Pet Shop</div>
+      <div class="title">ERP Pet Shop</div>
     </div>
     <div>
       <button mat-icon-button>
