--- a/src/app/page/cliente/cadastro/cadastro.component.html
+++ b/src/app/page/cliente/cadastro/cadastro.component.html
@@ -1,15 +1,164 @@
 <form class="app-form" #form="ngForm" (submit)="gravar($event, form)">
   <mat-card class="app-card">
     <mat-card-header>
-      <mat-card-title>Dados Básicos</mat-card-title>
+      <mat-card-title>Cliente</mat-card-title>
+      <mat-card-subtitle>Cadastro</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content>
-      <mat-form-field style="width: 20%; padding-left: 0.5em;">
-        <input matInput placeholder="Nome" name="NRNome" [(ngModel)]="entity.NRNome" #NRNome="ngModel" required max="100"
-          maxlength="100">
-        <mat-error *ngIf="NRNome.invalid">{{msgObrigatorio.msg}}</mat-error>
-      </mat-form-field>
-    </mat-card-content>
+
+    <mat-card class="app-card">
+      <mat-card-header>
+        <mat-card-title>Dados Básicos</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <mat-form-field style="width: 50%; padding-left: 0.5em;">
+          <input
+            matInput
+            placeholder="Nome"
+            name="NRNome"
+            [(ngModel)]="entity.NRNome"
+            #NRNome="ngModel"
+            required
+            max="100"
+            maxlength="100"
+          />
+          <mat-error *ngIf="NRNome.invalid">{{ msgObrigatorio.msg }}</mat-error>
+        </mat-form-field>
+        <mat-form-field style="width: 25%; padding-left: 0.5em;">
+          <input
+            matInput
+            [matDatepicker]="picker1"
+            [(ngModel)]="entity.DTNascimento"
+            name="DTNascimento"
+            placeholder="Data de Inicio"
+            required
+            #DTNascimento="ngModel"
+          />
+          <mat-datepicker-toggle
+            matSuffix
+            [for]="picker1"
+          ></mat-datepicker-toggle>
+          <mat-datepicker #picker1></mat-datepicker>
+          <mat-error *ngIf="DTNascimento">{{ msgObrigatorio.msg }}</mat-error>
+        </mat-form-field>
+        <mat-form-field style="width: 25%; padding-left: 0.5em;">
+          <input
+            matInput
+            placeholder="Telefone"
+            name="NRTelefone"
+            [(ngModel)]="entity.NRTelefone"
+            #NRTelefone="ngModel"
+            required
+            max="100"
+            maxlength="100"
+          />
+          <mat-icon matSuffix>phone</mat-icon>
+          <mat-error *ngIf="NRTelefone.invalid">{{
+            msgObrigatorio.msg
+          }}</mat-error>
+        </mat-form-field>
+        <section class="section-group" style="margin-left: 5px">
+          <label style="padding-right: 10px">Sexo</label>
+          <mat-radio-group
+            [(ngModel)]="entity.BLSexo"
+            name="BLSexo"
+            #BLSexo="ngModel"
+            required
+          >
+            <mat-radio-button value="sim" style="padding-right: 10px;" required
+              >Homen</mat-radio-button>
+            <mat-radio-button value="não">Mulher</mat-radio-button>
+          </mat-radio-group>
+        </section>
+        <div
+          *ngIf="form.invalid && form.submitted && !BLSexo.value"
+          class="mat-error"
+          style="font-size: 75%;">
+          {{ msgObrigatorio.msg }}
+        </div>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="app-card">
+      <mat-card-header>
+        <mat-card-title>Endereço</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <div>
+          <mat-form-field style="width: 20%; padding-left: 0.5em;">
+            <input
+              matInput
+              placeholder="CEP"
+              name="NRCep"
+              [(ngModel)]="entity.NRCep"
+              #NRCep="ngModel"
+              required
+              max="9"
+              maxlength="9"
+            />
+            <mat-error *ngIf="NRCep.invalid">{{
+              msgObrigatorio.msg
+            }}</mat-error>
+          </mat-form-field>
+        </div>
+        <mat-form-field style="width: 50%; padding-left: 0.5em;">
+          <input
+            matInput
+            placeholder="Logradouro"
+            name="NRLogradouro"
+            [(ngModel)]="entity.NRLogradouro"
+            #NRLogradouro="ngModel"
+            required
+            max="100"
+            maxlength="100"
+          />
+          <mat-error *ngIf="NRLogradouro.invalid">{{
+            msgObrigatorio.msg
+          }}</mat-error>
+        </mat-form-field>
+        <mat-form-field style="width: 20%; padding-left: 0.5em;">
+          <input
+            matInput
+            placeholder="Bairro"
+            name="NRBairro"
+            [(ngModel)]="entity.NRBairro"
+            #NRBairro="ngModel"
+            required
+            max="100"
+            maxlength="100"
+          />
+          <mat-error *ngIf="NRBairro.invalid">{{
+            msgObrigatorio.msg
+          }}</mat-error>
+        </mat-form-field>
+        <mat-form-field style="width: 20%; padding-left: 0.5em;">
+          <input
+            matInput
+            placeholder="Cidade"
+            name="NRCidade"
+            [(ngModel)]="entity.NRCidade"
+            #NRCidade="ngModel"
+            required
+            max="100"
+            maxlength="100"
+          />
+          <mat-error *ngIf="NRCidade.invalid">{{
+            msgObrigatorio.msg
+          }}</mat-error>
+        </mat-form-field>
+        <mat-form-field style="width: 10%; padding-left: 0.5em;">
+          <input
+            matInput
+            placeholder="UF"
+            name="NRUf"
+            [(ngModel)]="entity.NRUf"
+            #NRUf="ngModel"
+            required
+            max="2"
+            maxlength="2"
+          />
+          <mat-error *ngIf="NRUf.invalid">{{ msgObrigatorio.msg }}</mat-error>
+        </mat-form-field>
+      </mat-card-content>
+    </mat-card>
     <mat-card-actions>
       <div class="app-button-row">
         <button mat-raised-button type="submit" color="primary">Salvar</button>
