--- a/src/app/page/cliente/lista/lista.component.html
+++ b/src/app/page/cliente/lista/lista.component.html
@@ -41,19 +41,16 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
         <td mat-cell *matCellDef="let element"> {{element.NRNome}} </td>
       </ng-container>
-      
-      <!--
-      <ng-container matColumnDef="NOTipoProjeto">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo </th>
-        <td mat-cell *matCellDef="let element"> {{element.NOTipoProjeto}} </td>
+
+      <ng-container matColumnDef="NRTelefone">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Telefone </th>
+        <td mat-cell *matCellDef="let element"> {{element.NRTelefone}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="DTInicioDTFim">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Período de Vigência </th>
-        <td mat-cell *matCellDef="let element">
-          {{element.DTInicio | date:'dd/MM/yyyy'}} até {{element.DTFim | date:'dd/MM/yyyy'}}
-        </td>
-      </ng-container> -->
+      <ng-container matColumnDef="DTNascimento">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nascimento </th>
+        <td mat-cell *matCellDef="let element"> {{element?.DTNascimento.toDate() | date:'dd/MM/yyyy'}} </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
