--- a/src/app/page/cliente/cadastro/cadastro.component.html
+++ b/src/app/page/cliente/cadastro/cadastro.component.html
@@ -96,26 +96,26 @@
         <mat-icon class="example-tab-icon">pets</mat-icon>
         Pet
       </ng-template>
-      <form class="app-form" #form="ngForm" (submit)="gravar($event, form)">
+      <form class="app-form" #form="ngForm" *ngIf="activeForm" (submit)="gravarPet($event, form)">
         <mat-card class="app-card">
           <mat-card-header>
             <mat-card-title>Dados Básicos</mat-card-title>
           </mat-card-header>
           <mat-card-content>
             <mat-form-field style="width: 40%; padding-left: 0.5em;">
-              <mat-select placeholder="Espécie" [(ngModel)]="entityPet.IDEspecie" name="IDEspecie" #IDEspecie="ngModel"
+              <mat-select placeholder="Espécie" [(ngModel)]="entityPet.RLEspecie" name="IDEspecie" #IDEspecie="ngModel"
                 required (ngModelChange)="onChangeEspecie($event)">
                 <mat-option *ngFor="let t of especies" [value]="t">
-                  {{t.TPRaca}}
+                  {{t.TPRaca | titlecase }}
                 </mat-option>
               </mat-select>
               <mat-error *ngIf="IDTipoProjeto">{{msgObrigatorio.msg}}</mat-error>
             </mat-form-field>
             <mat-form-field style="width: 40%; padding-left: 0.5em;">
-              <mat-select placeholder="Tipo" [(ngModel)]="entityPet.IDTipoProjeto" name="IDTipoProjeto" #IDTipoProjeto="ngModel"
+              <mat-select placeholder="Tipo" [(ngModel)]="entityPet.RLRaca" name="IDTipoProjeto" #IDTipoProjeto="ngModel"
                 required (ngModelChange)="onChangeRaca($event)">
                 <mat-option *ngFor="let t of racas" [value]="t">
-                  {{t.NRNome}}
+                  {{t.NRNome | titlecase }}
                 </mat-option>
               </mat-select>
               <mat-error *ngIf="IDTipoProjeto">{{msgObrigatorio.msg}}</mat-error>
@@ -152,6 +152,53 @@
           <button mat-raised-button (click)="routerConsulta()">Voltar</button>
         </div>
       </form>
+      <mat-divider></mat-divider>
+      <div class="mat-elevation-z8" style="margin-top: 3%">
+        <table mat-table [dataSource]="entitiesPet" matSort>
+
+          <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef> Ações </th>
+            <td mat-cell *matCellDef="let row; let i=index;">
+              <!-- <button mat-icon-button color="primary" (click)="preEdit(row)">
+                <mat-icon>edit</mat-icon>
+              </button> -->
+              <button mat-icon-button color="warn" (click)="deleteRow(row)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="AVATAR">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Avatar</th>
+            <td mat-cell *matCellDef="let element">
+              <div style="display: inline-flex;">
+                <img *ngIf="element.DownloadURL | async; let downloadSrc" [src]="downloadSrc" style="border-radius: 50px; height: 50px; margin: auto" />
+              </div>
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="NRNome">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
+            <td mat-cell *matCellDef="let element"> {{element.NRNome}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="NRRaca">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Raça </th>
+            <td mat-cell *matCellDef="let element"> {{element?.RLRaca?.NRNome}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="DTNascimento">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nascimento </th>
+            <td mat-cell *matCellDef="let element"> {{element?.DTNascimento.toDate() | date:'dd/MM/yyyy'}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      </div>
+
     </mat-tab>
   </mat-tab-group>
 </mat-card>
